src/test/fail/redeclaration.ly
<@lily str a integer a
